# swtchr

./: .gitignore  Cargo.toml  README.md
src/: config.rs  control.rs  error.rs  hyprland.rs  lib.rs  main.rs  selection.rs  service.rs  xkb.rs
src/core/: detector.rs  dict.rs  lang_score.rs  mod.rs  state.rs
src/input/: injector.rs  mod.rs  reader.rs
