[package]
name = "swtchr"
version = "0.1.0"
edition = "2024"
description = "Keyboard layout autoswitcher (en↔ru) for Arch Linux + Hyprland"
license = "MIT"
rust-version = "1.85"

[dependencies]
tokio = { version = "1", features = [
    "rt",
    "macros",
    "sync",
    "time",
    "signal",
    "io-util",
    "fs",
    "process",
    "net",
] }
evdev = { version = "0.13", features = ["tokio"] }
xkbcommon = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[lints.rust]
unsafe_code = "deny"
